networkpolicy/default-deny-allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
  namespace: default
spec:
  podSelector: {} #this tells it to apply to all pods regardless
  policyTypes:
  - Egress
  - Ingress
  # we still want to be able to use DNS otherwise EVERYTHING is blocked
  egress:
  - to:
    ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
